Fix size of timeline when scrollbar has apper

--- a/src/components/MapTimeline/style.scss
+++ b/src/components/MapTimeline/style.scss
@@ -13,9 +13,10 @@
 
 .ptr-maptimeline {
 	display: flex;
-
+	
 	.ptr-timeline{
 		display: flex;
+		overflow: hidden;
 		flex: 1 1 auto;
 	}
 }
@@ -29,7 +30,7 @@
 	// font-size: $a1;
 	line-height: 1rem;
 	font-size: $b1;
-	max-width: 14rem;
+	min-width: 14rem;
 	width: 14rem;
 }
 .ptr-maptimelinelegend span {
